feat: add comprehensive port configuration guide
- Add detailed .env example with standard port mapping options
- Create port configuration guide with 3 implementation options
- Document Docker port mapping (simplest approach)
- Document nginx reverse proxy setup (production approach)
- Document alternative ports (fallback approach)
- Include quick setup commands for each option
- Add security and performance comparison tables
- Provide endpoint mapping reference

Options to avoid port specification:
1. Docker port mapping: 80/443 → no ports needed
2. nginx reverse proxy: production-ready with load balancing
3. Alternative ports: 8080/8443 → shorter but still requires ports

User can now access admin panel at https://domain.com/admin
instead of https://domain.com:5281/admin

--- a/examples/env.example
+++ b/examples/env.example
@@ -1,313 +1,139 @@
-# Professional Prosody XMPP Server Environment Configuration
-# Copy this file to .env and customize for your deployment
-
 # ============================================================================
-# BASIC CONFIGURATION
+# PROSODY XMPP SERVER CONFIGURATION
 # ============================================================================
 
-# Your XMPP domain (REQUIRED)
-PROSODY_DOMAIN=example.com
-
-# Administrator accounts (comma-separated)
-PROSODY_ADMINS=admin@example.com,support@example.com
-
-# ============================================================================
-# MODULE CONFIGURATION (ORGANIZED BY SOURCE)
-# ============================================================================
-
-# Core modules - all modules shipped with Prosody (recommended: true)
-# Includes required, autoloaded, and distributed modules
-PROSODY_ENABLE_CORE=true
-
-# Community security modules - stable third-party (recommended: true)
-PROSODY_ENABLE_SECURITY=true
-
-# Community beta modules - mostly stable with some edge cases (recommended: false)
-PROSODY_ENABLE_BETA=false
-
-# Community alpha/experimental modules - use with caution (recommended: false)
-PROSODY_ENABLE_ALPHA=false
-
-# ============================================================================
-# MODERN AUTHENTICATION (BETA MODULES)
-# ============================================================================
-
-# Enable SASL2 (XEP-0388: Extensible SASL Profile)
-PROSODY_ENABLE_SASL2=false
-
-# Enable Bind2 (XEP-0386: Bind 2)
-PROSODY_ENABLE_BIND2=false
-
-# Fast authentication tokens (XEP-0484: Fast Authentication Streamlining Tokens)
-PROSODY_SASL2_FAST_TOKENS=false
-
-# SASL downgrade protection (XEP-0474: SASL SCRAM Downgrade Protection)
-PROSODY_SASL_SSDP=true
-
-# Instant stream resumption (XEP-0397: Instant Stream Resumption)
-PROSODY_ENABLE_ISR=false
-
-# ============================================================================
-# USER EXPERIENCE ENHANCEMENTS
-# ============================================================================
-
-# Sync avatars between vCard and PEP (XEP-0084/0153)
-PROSODY_AVATAR_SYNC=true
-
-# Chat state filter timeout in seconds (XEP-0085)
-PROSODY_CHATSTATE_TIMEOUT=300
-
-# Respect message processing hints (XEP-0334)
-PROSODY_RESPECT_NO_STORE=true
-PROSODY_RESPECT_NO_COPY=true
-
-# Enhanced vCard support (XEP-0054/0292)
-PROSODY_VCARD4_SUPPORT=true
-PROSODY_PROFILE_PEP=true
-
-# ============================================================================
-# COMPLIANCE AND STANDARDS
-# ============================================================================
-
-# Enable XMPP Compliance Suites 2023 (XEP-0479)
-PROSODY_COMPLIANCE_2023=false
-
-# Automatic compliance testing
-PROSODY_COMPLIANCE_AUTO_TEST=false
-
-# Service outage status notifications (XEP-0455)
-PROSODY_SERVICE_OUTAGE_NOTIFICATIONS=false
-
-# Enhanced server information (XEP-0128)
-PROSODY_ENHANCED_SERVER_INFO=false
-
-# External service discovery (XEP-0215)
-PROSODY_ENABLE_EXTDISCO=false
-
-# ============================================================================
-# EXTERNAL SERVICES (for XEP-0215)
-# ============================================================================
-
-# STUN server configuration
-PROSODY_STUN_HOST=stun.example.com
-PROSODY_STUN_PORT=3478
-
-# TURN server configuration
-PROSODY_TURN_HOST=turn.example.com
-PROSODY_TURN_PORT=3478
-PROSODY_TURN_USERNAME=
-PROSODY_TURN_PASSWORD=
-
-# Server information fields
-PROSODY_SERVER_DESCRIPTION=Professional XMPP Server
-PROSODY_SERVER_LOCATION=Cloud
-PROSODY_ADMIN_CONTACT=admin@example.com
-PROSODY_OUTAGE_CONTACT=admin@example.com
-PROSODY_STATUS_URL=https://status.example.com
-
-# ============================================================================
-# REGISTRATION SETTINGS (PUBLIC SERVER BEST PRACTICES)
-# ============================================================================
-
-# Allow user registration (recommended: false for production)
-PROSODY_ALLOW_REGISTRATION=false
-
-# Invitation-only registration (recommended: true for public servers)
-PROSODY_INVITE_ONLY=true
-
-# Registration rate limiting (per-IP)
-# "Spammers have lots of IP addresses and lots of time, so this limit alone is not enough"
-PROSODY_REG_THROTTLE_PERIOD=300          # Minimum seconds between registrations (5 minutes)
-PROSODY_REG_THROTTLE_MAX=3               # Maximum registrations per period
-PROSODY_REG_THROTTLE_WINDOW=3600         # Rate limiting window (1 hour)
-
-# ============================================================================
-# CONTACT INFORMATION (RFC 3912 & XEP-0128)
-# ============================================================================
-
-# Administrative contacts (used for abuse reporting and server info)
-PROSODY_ADMIN_EMAIL=admin@example.com
-PROSODY_SUPPORT_EMAIL=support@example.com
-PROSODY_ABUSE_EMAIL=abuse@example.com     # CRITICAL for public servers
-PROSODY_SECURITY_EMAIL=security@example.com
-
-# Contact URLs
-PROSODY_CONTACT_URL=https://example.com/contact
-PROSODY_SUPPORT_URL=https://example.com/support
-PROSODY_ABUSE_URL=https://example.com/report-abuse
-PROSODY_STATUS_URL=https://status.example.com
-
-# ============================================================================
-# DATABASE CONFIGURATION
-# ============================================================================
-
-# Storage backend: sqlite or sql
-PROSODY_STORAGE=sqlite
-
-# Database settings (only for PROSODY_STORAGE=sql)
-PROSODY_DB_DRIVER=PostgreSQL
-PROSODY_DB_HOST=db
-PROSODY_DB_PORT=5432
-PROSODY_DB_NAME=prosody
-PROSODY_DB_USER=prosody
-PROSODY_DB_PASSWORD=secure_password_here
-
-# Database connection pooling
-PROSODY_DB_POOL_SIZE=5
-PROSODY_DB_MAX_CONNECTIONS=20
-PROSODY_DB_TIMEOUT=30
-
-# ============================================================================
-# PERFORMANCE SETTINGS (PUBLIC SERVER OPTIMIZED)
-# ============================================================================
-
-# Client connection rate limiting (from Prosody public server production example)
-PROSODY_C2S_RATE=3kb/s                   # Production example from documentation
-PROSODY_C2S_BURST=2s                     # Production example from documentation
-
-# Server connection rate limiting (from Prosody public server production example)
-PROSODY_S2S_RATE=30kb/s                  # Production example from documentation
-PROSODY_S2S_BURST=3s                     # Production example from documentation
-
-# Connection limits
-PROSODY_MAX_CLIENTS=10000                # Maximum total client connections
-PROSODY_MAX_CONNECTIONS_PER_IP=5         # Maximum connections per IP address
-
-# Stanza size limits (XMPP Safeguarding Manifesto compliance)
-PROSODY_C2S_STANZA_LIMIT=262144          # 256KB max stanza size
-PROSODY_S2S_STANZA_LIMIT=524288          # 512KB max stanza size for s2s
-
-# Garbage collection settings
-PROSODY_GC_MODE=incremental
-PROSODY_GC_THRESHOLD=150
-PROSODY_GC_SPEED=500
-
-# ============================================================================
-# LOGGING CONFIGURATION
-# ============================================================================
-
-# Log level: debug, info, warn, error
-PROSODY_LOG_LEVEL=info
-
-# Log format: default or json
-PROSODY_LOG_FORMAT=default
-
-# ============================================================================
-# SECURITY SETTINGS (PUBLIC SERVER ANTI-ABUSE)
-# ============================================================================
-
-# Authentication failure limits
-PROSODY_FAILED_AUTH_THRESHOLD=5          # Maximum failed authentication attempts
-PROSODY_FAILED_AUTH_WINDOW=300           # Time window for failed attempts (5 minutes)
-
-# Anti-spam and abuse prevention
-PROSODY_SPAM_THRESHOLD=3                 # Messages before spam action
-PROSODY_SPAM_NOTIFICATION=admin@example.com  # Spam alert recipient
-
-# Firewall rate limiting
-PROSODY_FIREWALL_C2S_RATE=10/60          # 10 per minute for client connections
-PROSODY_FIREWALL_S2S_RATE=30/60          # 30 per minute for server connections
-
-# DNS Blocklist settings (requires mod_firewall)
-PROSODY_ENABLE_DNSBL=true                # Enable DNS blocklist checking
-PROSODY_DNSBL_ACTION=reject              # Action: reject, log, throttle
-
-# Content filtering
-PROSODY_MAX_MESSAGE_LENGTH=10000         # Maximum message length (10KB)
-PROSODY_MAX_RECIPIENTS_PER_MESSAGE=50    # Maximum recipients per message
-
-# ============================================================================
-# MUC (MULTI-USER CHAT) LIMITS
-# ============================================================================
-
-# MUC flood prevention (mod_muc_limits)
-PROSODY_MUC_MAX_MESSAGES_PER_MINUTE=30   # Message rate limit in chat rooms
-PROSODY_MUC_MAX_PRESENCE_PER_MINUTE=20   # Presence update rate limit
-PROSODY_MUC_MAX_PARTICIPANTS=200         # Maximum participants per room
-PROSODY_MAX_ROOMS_PER_USER=10            # Maximum rooms a user can create
-
-# ============================================================================
-# SCALABILITY SETTINGS
-# ============================================================================
-
-# File descriptor limits (see examples/systemd-nofile.conf)
-PROSODY_RECOMMENDED_NOFILE=1048576       # 1M file descriptors for large servers
-
-# Connection optimization
-PROSODY_TCP_NODELAY=true                 # Enable TCP_NODELAY for low latency
-PROSODY_TCP_KEEPALIVE=true               # Enable TCP keepalive
-
-# ============================================================================
-# BACKUP AND MONITORING
-# ============================================================================
-
-# Backup settings
-PROSODY_BACKUP_ENABLED=true              # Enable automated backups
-PROSODY_BACKUP_FREQUENCY=daily           # Backup frequency
-PROSODY_BACKUP_RETENTION=30d             # Backup retention period
-
-# Monitoring thresholds
-PROSODY_ALERT_MAX_CONNECTIONS=9000       # Alert when approaching connection limit
-PROSODY_ALERT_HIGH_ERROR_RATE=0.05       # Alert on 5% error rate
-PROSODY_ALERT_MEMORY_USAGE=0.85          # Alert on 85% memory usage
-PROSODY_ALERT_DISK_USAGE=0.90            # Alert on 90% disk usage
-
-# Health check URLs
-PROSODY_HEALTH_CHECK_URL=https://status.example.com/prosody
-PROSODY_METRICS_URL=https://monitoring.example.com/prosody
+# Core Configuration
+PROSODY_DOMAIN=localhost
+PROSODY_ADMINS=admin@localhost
 
 # ============================================================================
 # PORT CONFIGURATION
 # ============================================================================
 
-# Client connections (C2S)
+# Standard XMPP ports (usually no need to change)
 PROSODY_C2S_PORT=5222
-
-# Server connections (S2S)
 PROSODY_S2S_PORT=5269
 
-# HTTP services (BOSH, WebSocket)
-PROSODY_HTTP_PORT=5280
+# HTTP/HTTPS ports for web services
+# Option 1: Standard ports (no port needed in URLs)
+# PROSODY_HTTP_PORT=80
+# PROSODY_HTTPS_PORT=443
 
-# HTTPS services
+# Option 2: Default Prosody ports (requires :5280/:5281 in URLs)
+PROSODY_HTTP_PORT=5280
 PROSODY_HTTPS_PORT=5281
 
-# ============================================================================
-# DEPLOYMENT PROFILES
-# ============================================================================
-
-# Docker Compose profiles to enable
-# Available: sql, cache, monitoring, enterprise
-COMPOSE_PROFILES=
+# Option 3: Alternative ports (if 80/443 are occupied)
+# PROSODY_HTTP_PORT=8080
+# PROSODY_HTTPS_PORT=8443
 
 # ============================================================================
-# EXAMPLE CONFIGURATIONS
+# WEB SERVICES ACCESS
 # ============================================================================
 
-# Personal Server (1-50 users)
-# PROSODY_STORAGE=sqlite
-# PROSODY_ENABLE_OFFICIAL=true
-# PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_BETA=false
-# PROSODY_C2S_RATE=5kb/s
-# PROSODY_C2S_BURST=15kb
+# With standard ports (80/443):
+# - Admin Panel: https://yourdomain.com/admin
+# - Metrics: https://yourdomain.com/metrics  
+# - File Upload: https://yourdomain.com/upload
+# - WebSocket: wss://yourdomain.com/xmpp-websocket
 
-# Community Server (50-500 users)
-# PROSODY_STORAGE=sql
-# PROSODY_ENABLE_OFFICIAL=true
-# PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_BETA=true
-# PROSODY_C2S_RATE=10kb/s
-# PROSODY_C2S_BURST=25kb
-# COMPOSE_PROFILES=sql,cache
+# With default ports (5280/5281):
+# - Admin Panel: https://yourdomain.com:5281/admin
+# - Metrics: https://yourdomain.com:5281/metrics
+# - File Upload: https://yourdomain.com:5281/upload  
+# - WebSocket: wss://yourdomain.com:5281/xmpp-websocket
 
-# Enterprise Server (500+ users)
-# PROSODY_STORAGE=sql
-# PROSODY_ENABLE_OFFICIAL=true
-# PROSODY_ENABLE_SECURITY=true
-# PROSODY_ENABLE_BETA=true
-# PROSODY_ENABLE_ALPHA=false
-# PROSODY_C2S_RATE=50kb/s
-# PROSODY_C2S_BURST=100kb
-# PROSODY_LOG_FORMAT=json
-# COMPOSE_PROFILES=sql,cache,monitoring,enterprise 
+# ============================================================================
+# DATABASE CONFIGURATION
+# ============================================================================
+
+# Database settings
+PROSODY_STORAGE=sqlite
+PROSODY_DB_DRIVER=SQLite3
+
+# PostgreSQL settings (if using PostgreSQL)
+PROSODY_DB_HOST=postgres
+PROSODY_DB_PORT=5432
+PROSODY_DB_NAME=prosody
+PROSODY_DB_USER=prosody
+PROSODY_DB_PASSWORD=changeMe123!
+
+# ============================================================================
+# FEATURE CONTROL
+# ============================================================================
+
+# Module stability levels
+PROSODY_ENABLE_SECURITY=true
+PROSODY_ENABLE_MODERN=true
+PROSODY_ENABLE_BETA=true
+PROSODY_ENABLE_ALPHA=false
+
+# Optional features
+PROSODY_ENABLE_HTTP=true
+PROSODY_ENABLE_ADMIN=true
+
+# Registration settings
+PROSODY_ALLOW_REGISTRATION=false
+
+# ============================================================================
+# PERFORMANCE SETTINGS  
+# ============================================================================
+
+# Rate limiting
+PROSODY_C2S_RATE=10kb/s
+PROSODY_C2S_BURST=25kb
+PROSODY_S2S_RATE=30kb/s
+PROSODY_S2S_BURST=100kb
+
+# Logging
+PROSODY_LOG_LEVEL=info
+PROSODY_LOG_FORMAT=default
+
+# ============================================================================
+# ARCHIVE AND RETENTION
+# ============================================================================
+
+# Archive settings
+PROSODY_ARCHIVE_POLICY=roster
+PROSODY_ARCHIVE_EXPIRE=1y
+
+# MUC settings
+PROSODY_MUC_LOG_EXPIRE=1y
+PROSODY_MUC_HISTORY=50
+
+# ============================================================================
+# FILE UPLOAD SETTINGS
+# ============================================================================
+
+# Upload settings (if HTTP enabled)
+PROSODY_UPLOAD_SIZE_LIMIT=10485760  # 10MB
+PROSODY_UPLOAD_EXPIRE=2592000       # 30 days
+
+# ============================================================================
+# TURN/STUN CONFIGURATION (for voice/video calls)
+# ============================================================================
+
+# TURN server settings
+TURN_PASSWORD=changeMe123!
+TURN_SECRET=changeMe123!
+TURN_REALM=turn.yourdomain.com
+
+# ============================================================================
+# MONITORING CONFIGURATION
+# ============================================================================
+
+# Monitoring settings
+PROMETHEUS_DATA_RETENTION=30d
+GRAFANA_ADMIN_PASSWORD=changeMe123!
+
+# ============================================================================
+# SECURITY SETTINGS
+# ============================================================================
+
+# Security hardening
+PROSODY_SECURITY_POLICY=medium
+PROSODY_TLS_POLICY=strict
+
+# Contact information (required for compliance)
+PROSODY_CONTACT_ADMIN=admin@yourdomain.com
+PROSODY_CONTACT_ABUSE=abuse@yourdomain.com 
