feat: simplify Docker configuration for single-profile deployment
BREAKING CHANGE: Removed complex multi-profile Docker setup

- Consolidated docker-compose.yml with production-ready defaults
- Removed docker-compose.production.yml (merged into main compose file)
- Eliminated complex feature flags and profiles system
- Simplified environment variables to essential ones only
- Production defaults: PostgreSQL, enhanced security, performance optimization
- Added Direct TLS ports (5223/5270) for modern XMPP clients
- Enhanced resource limits and sysctls for production deployment

Environment variables reduced from 30+ to 12 essential ones.
Result: Single production-ready deployment replacing complex profiles.

--- a/examples/env.example
+++ b/examples/env.example
@@ -1,139 +1,92 @@
 # ============================================================================
-# PROSODY XMPP SERVER CONFIGURATION
+# PROFESSIONAL PROSODY XMPP SERVER
+# Essential Environment Variables
 # ============================================================================
-
-# Core Configuration
-PROSODY_DOMAIN=localhost
-PROSODY_ADMINS=admin@localhost
+# Copy this file to .env and customize for your deployment
 
 # ============================================================================
-# PORT CONFIGURATION
+# DOMAIN CONFIGURATION (REQUIRED)
 # ============================================================================
 
-# Standard XMPP ports (usually no need to change)
-PROSODY_C2S_PORT=5222
-PROSODY_S2S_PORT=5269
+# Your XMPP domain (REQUIRED - change this!)
+PROSODY_DOMAIN=yourdomain.com
 
-# HTTP/HTTPS ports for web services
-# Option 1: Standard ports (no port needed in URLs)
-# PROSODY_HTTP_PORT=80
-# PROSODY_HTTPS_PORT=443
-
-# Option 2: Default Prosody ports (requires :5280/:5281 in URLs)
-PROSODY_HTTP_PORT=5280
-PROSODY_HTTPS_PORT=5281
-
-# Option 3: Alternative ports (if 80/443 are occupied)
-# PROSODY_HTTP_PORT=8080
-# PROSODY_HTTPS_PORT=8443
-
-# ============================================================================
-# WEB SERVICES ACCESS
-# ============================================================================
-
-# With standard ports (80/443):
-# - Admin Panel: https://yourdomain.com/admin
-# - Metrics: https://yourdomain.com/metrics  
-# - File Upload: https://yourdomain.com/upload
-# - WebSocket: wss://yourdomain.com/xmpp-websocket
-
-# With default ports (5280/5281):
-# - Admin Panel: https://yourdomain.com:5281/admin
-# - Metrics: https://yourdomain.com:5281/metrics
-# - File Upload: https://yourdomain.com:5281/upload  
-# - WebSocket: wss://yourdomain.com:5281/xmpp-websocket
+# Administrator JIDs (comma-separated)
+PROSODY_ADMINS=admin@yourdomain.com
 
 # ============================================================================
 # DATABASE CONFIGURATION
 # ============================================================================
 
-# Database settings
-PROSODY_STORAGE=sqlite
-PROSODY_DB_DRIVER=SQLite3
-
-# PostgreSQL settings (if using PostgreSQL)
-PROSODY_DB_HOST=postgres
-PROSODY_DB_PORT=5432
+# Database credentials (REQUIRED for production)
 PROSODY_DB_NAME=prosody
 PROSODY_DB_USER=prosody
-PROSODY_DB_PASSWORD=changeMe123!
+PROSODY_DB_PASSWORD=ChangeMe123!
 
 # ============================================================================
-# FEATURE CONTROL
+# PORT CONFIGURATION (Optional - defaults are usually fine)
 # ============================================================================
 
-# Module stability levels
-PROSODY_ENABLE_SECURITY=true
-PROSODY_ENABLE_MODERN=true
-PROSODY_ENABLE_BETA=true
-PROSODY_ENABLE_ALPHA=false
+# XMPP ports
+PROSODY_C2S_PORT=5222              # Client connections (STARTTLS)
+PROSODY_S2S_PORT=5269              # Server-to-server
+PROSODY_C2S_DIRECT_TLS_PORT=5223   # Client connections (Direct TLS)
+PROSODY_S2S_DIRECT_TLS_PORT=5270   # Server-to-server (Direct TLS)
 
-# Optional features
-PROSODY_ENABLE_HTTP=true
-PROSODY_ENABLE_ADMIN=true
+# Web services ports
+PROSODY_HTTP_PORT=5280             # HTTP (BOSH/WebSocket/Admin)
+PROSODY_HTTPS_PORT=5281            # HTTPS (BOSH/WebSocket/Admin)
 
-# Registration settings
+# ============================================================================
+# OPTIONAL SETTINGS
+# ============================================================================
+
+# Registration (set to true only if you want open registration)
 PROSODY_ALLOW_REGISTRATION=false
 
-# ============================================================================
-# PERFORMANCE SETTINGS  
-# ============================================================================
-
-# Rate limiting
-PROSODY_C2S_RATE=10kb/s
-PROSODY_C2S_BURST=25kb
-PROSODY_S2S_RATE=30kb/s
-PROSODY_S2S_BURST=100kb
-
-# Logging
+# Logging level (debug, info, warn, error)
 PROSODY_LOG_LEVEL=info
-PROSODY_LOG_FORMAT=default
+
+# File upload size limit in bytes (default: ~50MB)
+PROSODY_UPLOAD_SIZE_LIMIT=50485760
 
 # ============================================================================
-# ARCHIVE AND RETENTION
+# SECURITY CREDENTIALS (Optional - for enhanced features)
 # ============================================================================
 
-# Archive settings
-PROSODY_ARCHIVE_POLICY=roster
-PROSODY_ARCHIVE_EXPIRE=1y
+# LDAP integration (if using enterprise directory)
+# PROSODY_LDAP_PASSWORD=your_ldap_password
 
-# MUC settings
-PROSODY_MUC_LOG_EXPIRE=1y
-PROSODY_MUC_HISTORY=50
+# OAuth integration (if using external authentication)
+# PROSODY_OAUTH_CLIENT_SECRET=your_oauth_secret
 
-# ============================================================================
-# FILE UPLOAD SETTINGS
-# ============================================================================
-
-# Upload settings (if HTTP enabled)
-PROSODY_UPLOAD_SIZE_LIMIT=10485760  # 10MB
-PROSODY_UPLOAD_EXPIRE=2592000       # 30 days
+# TURN/STUN server secret (for voice/video calls)
+TURN_SECRET=ChangeMe123!
 
 # ============================================================================
-# TURN/STUN CONFIGURATION (for voice/video calls)
+# WEB ACCESS URLS (with default ports)
 # ============================================================================
 
-# TURN server settings
-TURN_PASSWORD=changeMe123!
-TURN_SECRET=changeMe123!
-TURN_REALM=turn.yourdomain.com
+# Access your services at:
+# - Admin Panel: https://yourdomain.com:5281/admin
+# - File Upload: https://yourdomain.com:5281/upload
+# - WebSocket: wss://yourdomain.com:5281/xmpp-websocket
+# - BOSH: https://yourdomain.com:5281/http-bind
+
+# For standard ports (80/443), set:
+# PROSODY_HTTP_PORT=80
+# PROSODY_HTTPS_PORT=443
+# Then access without port numbers in URLs
 
 # ============================================================================
-# MONITORING CONFIGURATION
+# MONITORING AND TURN SERVICES (Optional)
 # ============================================================================
 
-# Monitoring settings
-PROMETHEUS_DATA_RETENTION=30d
-GRAFANA_ADMIN_PASSWORD=changeMe123!
+# To enable monitoring stack:
+# docker-compose -f docker-compose.yml -f docker-compose.monitoring.yml up -d
 
-# ============================================================================
-# SECURITY SETTINGS
-# ============================================================================
+# To enable TURN/STUN server for voice/video:
+# docker-compose -f docker-compose.yml -f docker-compose.turn.yml up -d
 
-# Security hardening
-PROSODY_SECURITY_POLICY=medium
-PROSODY_TLS_POLICY=strict
-
-# Contact information (required for compliance)
-PROSODY_CONTACT_ADMIN=admin@yourdomain.com
-PROSODY_CONTACT_ABUSE=abuse@yourdomain.com 
+# Monitoring admin password
+# GRAFANA_ADMIN_PASSWORD=ChangeMe123! 
