--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 
 # Professional Prosody XMPP Server
-# Basic deployment configuration
+# Production-ready single-profile deployment
+# Matches the simplified prosody.cfg.lua configuration
 
 services:
   # ============================================================================
@@ -16,62 +17,43 @@ services:
     hostname: prosody
     restart: unless-stopped
 
-    # Environment configuration
+    # Essential environment configuration only
     environment:
-      # Basic settings
+      # Domain settings (required)
       - PROSODY_DOMAIN=${PROSODY_DOMAIN:-localhost}
       - PROSODY_ADMINS=${PROSODY_ADMINS:-admin@localhost}
 
-      # Stability-based module controls
-      - PROSODY_ENABLE_SECURITY=${PROSODY_ENABLE_SECURITY:-true}
-      - PROSODY_ENABLE_MODERN=${PROSODY_ENABLE_MODERN:-true}
-      - PROSODY_ENABLE_BETA=${PROSODY_ENABLE_BETA:-true}
-      - PROSODY_ENABLE_ALPHA=${PROSODY_ENABLE_ALPHA:-false}
+      # Database configuration (production default: PostgreSQL)
+      - PROSODY_STORAGE=sql
+      - PROSODY_DB_DRIVER=PostgreSQL
+      - PROSODY_DB_NAME=${PROSODY_DB_NAME:-prosody}
+      - PROSODY_DB_USER=${PROSODY_DB_USER:-prosody}
+      - PROSODY_DB_PASSWORD=${PROSODY_DB_PASSWORD:-prosody}
+      - PROSODY_DB_HOST=db
+      - PROSODY_DB_PORT=5432
 
-      # Optional features
-      - PROSODY_ENABLE_HTTP=${PROSODY_ENABLE_HTTP:-false}
-      - PROSODY_ENABLE_ADMIN=${PROSODY_ENABLE_ADMIN:-false}
+      # Security credentials (optional, for enhanced security)
+      - PROSODY_LDAP_PASSWORD=${PROSODY_LDAP_PASSWORD:-}
+      - PROSODY_OAUTH_CLIENT_SECRET=${PROSODY_OAUTH_CLIENT_SECRET:-}
+      - TURN_SECRET=${TURN_SECRET:-changeme}
 
-      # Registration settings
-      - PROSODY_ALLOW_REGISTRATION=${PROSODY_ALLOW_REGISTRATION:-false}
-
-      # Database settings
-      - PROSODY_STORAGE=${PROSODY_STORAGE:-sqlite}
-      - PROSODY_DB_DRIVER=${PROSODY_DB_DRIVER:-SQLite3}
-
-      # Performance settings
-      - PROSODY_C2S_RATE=${PROSODY_C2S_RATE:-10kb/s}
-      - PROSODY_C2S_BURST=${PROSODY_C2S_BURST:-25kb}
-      - PROSODY_S2S_RATE=${PROSODY_S2S_RATE:-30kb/s}
-      - PROSODY_S2S_BURST=${PROSODY_S2S_BURST:-100kb}
-
-      # Logging
+      # Optional overrides (production defaults used if not set)
       - PROSODY_LOG_LEVEL=${PROSODY_LOG_LEVEL:-info}
-      - PROSODY_LOG_FORMAT=${PROSODY_LOG_FORMAT:-default}
-
-      # Archive settings
-      - PROSODY_ARCHIVE_POLICY=${PROSODY_ARCHIVE_POLICY:-roster}
-      - PROSODY_ARCHIVE_EXPIRE=${PROSODY_ARCHIVE_EXPIRE:-1y}
-
-      # MUC settings
-      - PROSODY_MUC_LOG_EXPIRE=${PROSODY_MUC_LOG_EXPIRE:-1y}
-      - PROSODY_MUC_HISTORY=${PROSODY_MUC_HISTORY:-50}
-
-      # Upload settings (if HTTP enabled)
-      - PROSODY_UPLOAD_SIZE_LIMIT=${PROSODY_UPLOAD_SIZE_LIMIT:-10485760}
-      - PROSODY_UPLOAD_EXPIRE=${PROSODY_UPLOAD_EXPIRE:-2592000}
+      - PROSODY_ALLOW_REGISTRATION=${PROSODY_ALLOW_REGISTRATION:-false}
+      - PROSODY_UPLOAD_SIZE_LIMIT=${PROSODY_UPLOAD_SIZE_LIMIT:-50485760}
 
     # Port mappings
     ports:
-      - '${PROSODY_C2S_PORT:-5222}:5222' # Client connections
-      - '${PROSODY_S2S_PORT:-5269}:5269' # Server connections
-      - '${PROSODY_HTTP_PORT:-5280}:5280' # HTTP (BOSH/WebSocket)
-      - '${PROSODY_HTTPS_PORT:-5281}:5281' # HTTPS
+      - '${PROSODY_C2S_PORT:-5222}:5222'        # Client connections (STARTTLS)
+      - '${PROSODY_S2S_PORT:-5269}:5269'        # Server connections
+      - '${PROSODY_C2S_DIRECT_TLS_PORT:-5223}:5223'  # Client connections (Direct TLS)
+      - '${PROSODY_S2S_DIRECT_TLS_PORT:-5270}:5270'  # Server connections (Direct TLS)
+      - '${PROSODY_HTTP_PORT:-5280}:5280'       # HTTP (BOSH/WebSocket/Admin)
+      - '${PROSODY_HTTPS_PORT:-5281}:5281'      # HTTPS (BOSH/WebSocket/Admin)
 
     # Volume mounts
     volumes:
-      # Configuration
-      - prosody_config:/etc/prosody
+      # Configuration (read-only)
       - ./config:/etc/prosody/config:ro
 
       # Data persistence
@@ -92,39 +74,55 @@ services:
       retries: 3
       start_period: 60s
 
-    # Security settings
+    # Production security settings
     security_opt:
       - no-new-privileges:true
+      - apparmor:docker-default
 
-    # Resource limits
+    # Production resource limits
     deploy:
       resources:
         limits:
-          memory: 256M
-          cpus: '1.0'
+          memory: 1G
+          cpus: '2.0'
         reservations:
-          memory: 64M
+          memory: 256M
           cpus: '0.5'
 
-    # Logging
+    # Production sysctls for high performance
+    sysctls:
+      - net.core.somaxconn=65535
+      - net.ipv4.tcp_keepalive_time=600
+      - net.ipv4.ip_local_port_range=1024 65535
+
+    # Ulimits for high concurrency
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+      nproc:
+        soft: 32768
+        hard: 32768
+
+    # Production logging
     logging:
       driver: 'json-file'
       options:
-        max-size: '10m'
-        max-file: '3'
+        max-size: '50m'
+        max-file: '5'
+        compress: 'true'
 
     # Dependencies
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
     # Networks
     networks:
       - prosody_network
-      - monitoring_network
-      - turn_network
 
   # ============================================================================
-  # DATABASE (OPTIONAL - ONLY IF USING SQL STORAGE)
+  # POSTGRESQL DATABASE
   # ============================================================================
   db:
     image: postgres:15-alpine
@@ -141,18 +139,34 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
 
+    # Production PostgreSQL optimization
+    command: >
+      postgres
+        -c max_connections=200
+        -c shared_buffers=256MB
+        -c effective_cache_size=1GB
+        -c maintenance_work_mem=64MB
+        -c checkpoint_completion_target=0.9
+        -c wal_buffers=16MB
+        -c default_statistics_target=100
+        -c random_page_cost=1.1
+        -c effective_io_concurrency=200
+        -c work_mem=4MB
+        -c min_wal_size=1GB
+        -c max_wal_size=4GB
+
     # Security settings
     security_opt:
       - no-new-privileges:true
 
-    # Resource limits
+    # Production resource limits
     deploy:
       resources:
         limits:
-          memory: 128M
-          cpus: '0.5'
+          memory: 512M
+          cpus: '1.0'
         reservations:
-          memory: 32M
+          memory: 128M
           cpus: '0.25'
 
     # Health check
@@ -167,82 +181,19 @@ services:
     networks:
       - prosody_network
 
-    # Only start if using SQL storage
-    profiles:
-      - sql
-
-  # ============================================================================
-  # REDIS CACHE (OPTIONAL - FOR PERFORMANCE)
-  # ============================================================================
-  redis:
-    image: redis:7-alpine
-    container_name: prosody-redis
-    restart: unless-stopped
-
-    command: redis-server --appendonly yes --maxmemory 64mb --maxmemory-policy allkeys-lru
-
-    volumes:
-      - redis_data:/data
-
-    # Security settings
-    security_opt:
-      - no-new-privileges:true
-
-    # Resource limits
-    deploy:
-      resources:
-        limits:
-          memory: 64M
-          cpus: '0.25'
-        reservations:
-          memory: 16M
-          cpus: '0.1'
-
-    # Health check
-    healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
-
-    # Networks
-    networks:
-      - prosody_network
-
-    # Only start if caching is enabled
-    profiles:
-      - cache
-
 # ============================================================================
 # VOLUMES
 # ============================================================================
 volumes:
-  # Prosody volumes
-  prosody_config:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/config
-
   prosody_data:
     driver: local
-
   prosody_uploads:
     driver: local
-
   prosody_certs:
     driver: local
-
   prosody_logs:
     driver: local
-
-  # Database volumes
   postgres_data:
-    driver: local
-
-  redis_data:
     driver: local
 
 # ============================================================================
@@ -254,13 +205,4 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
-  
-  monitoring_network:
-    driver: bridge
-    external: true
-    name: prosody_monitoring_network
-  
-  turn_network:
-    driver: bridge
-    external: true
-    name: prosody_turn_network
+          gateway: 172.20.0.1
