--- a/examples/env.example
+++ b/examples/env.example
@@ -64,14 +64,50 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 TURN_SECRET=ChangeMe123!
 
 # ============================================================================
+# TURN/STUN SERVER CONFIGURATION (for voice/video calls)
+# ============================================================================
+
+# TURN server ports
+TURN_PORT=3478                     # STUN/TURN port
+TURNS_PORT=5349                    # TURN over TLS port
+TURN_MIN_PORT=49152                # RTP relay port range start
+TURN_MAX_PORT=65535                # RTP relay port range end
+
+# TURN server authentication
+TURN_USERNAME=prosody
+TURN_PASSWORD=ChangeMe123!
+
+# ============================================================================
+# MONITORING CONFIGURATION
+# ============================================================================
+
+# Monitoring service ports
+PROMETHEUS_PORT=9090               # Prometheus metrics
+GRAFANA_PORT=3000                  # Grafana dashboards
+NODE_EXPORTER_PORT=9100            # System metrics
+
+# Grafana admin password
+GRAFANA_ADMIN_PASSWORD=ChangeMe123!
+
+# ============================================================================
 # WEB ACCESS URLS (with default ports)
 # ============================================================================
 
-# Access your services at:
+# XMPP Services:
 # - Admin Panel: https://yourdomain.com:5281/admin
 # - File Upload: https://yourdomain.com:5281/upload
 # - WebSocket: wss://yourdomain.com:5281/xmpp-websocket
 # - BOSH: https://yourdomain.com:5281/http-bind
+
+# Monitoring Services:
+# - Prometheus: http://localhost:9090
+# - Grafana: http://localhost:3000
+# - Node Exporter: http://localhost:9100
+
+# TURN/STUN Services:
+# - STUN: yourdomain.com:3478
+# - TURN: yourdomain.com:3478
+# - TURNS (TLS): yourdomain.com:5349
 
 # For standard ports (80/443), set:
 # PROSODY_HTTP_PORT=80
@@ -79,14 +115,14 @@ TURN_SECRET=ChangeMe123!
 # Then access without port numbers in URLs
 
 # ============================================================================
-# MONITORING AND TURN SERVICES (Optional)
+# DEPLOYMENT MODES
 # ============================================================================
 
-# To enable monitoring stack:
-# docker-compose -f docker-compose.yml -f docker-compose.monitoring.yml up -d
+# Minimal deployment (XMPP + Database only):
+# docker-compose up -d prosody db
 
-# To enable TURN/STUN server for voice/video:
-# docker-compose -f docker-compose.yml -f docker-compose.turn.yml up -d
+# Full deployment (all services):
+# docker-compose up -d
 
-# Monitoring admin password
-# GRAFANA_ADMIN_PASSWORD=ChangeMe123! 
+# Custom service selection:
+# docker-compose up -d prosody db grafana prometheus 
