feat: expose HTTP services for WebSocket, BOSH, and web admin
- Add HTTP (5280) and HTTPS (5281) port mappings to Docker
- Enable WebSocket connections (wss://:5281/xmpp-websocket)
- Enable BOSH for legacy web clients (:5281/http-bind)
- Enable web admin interface (:5281/admin)
- Enable file upload/share service (:5281/upload)
- Update documentation with client connection examples
- Add comprehensive service access guide in README

This enables modern web-based XMPP clients and provides full HTTP service access for production deployments.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,8 +48,8 @@ services:
       - '${PROSODY_S2S_PORT:-5269}:5269'        # Server connections
       - '${PROSODY_C2S_DIRECT_TLS_PORT:-5223}:5223'  # Client connections (Direct TLS)
       - '${PROSODY_S2S_DIRECT_TLS_PORT:-5270}:5270'  # Server connections (Direct TLS)
-      - '${PROSODY_HTTP_PORT:-5280}:5280'       # HTTP (BOSH/WebSocket/Admin)
-      - '${PROSODY_HTTPS_PORT:-5281}:5281'      # HTTPS (BOSH/WebSocket/Admin)
+      - '${PROSODY_HTTP_PORT:-5280}:5280'       # HTTP services (WebSocket, BOSH, upload, admin)
+      - '${PROSODY_HTTPS_PORT:-5281}:5281'      # HTTPS services (secure web services)
 
     # Volume mounts
     volumes:
