docs(dns-setup.md): expand DNS setup guide with detailed SRV and A/AAAA records
Enhance the DNS setup guide to include comprehensive instructions
for configuring SRV and A/AAAA records for XMPP service delegation.
This provides a clear separation of user addresses and server
infrastructure, ensuring a clean domain setup. The guide now
includes detailed examples and verification steps to assist
administrators in setting up their DNS records correctly.

chore(env.example): add comments for domain and admin configuration

Add comments to the example environment file to clarify the
purpose of the PROSODY_DOMAIN and PROSODY_ADMINS variables.
This helps users understand the importance of domain separation
and ensures they configure their environment correctly.

refactor(entrypoint.sh): improve initialization and validation logic

Refactor the entrypoint script to enhance readability and
maintainability. Introduce functions for directory setup,
certificate management, and database waiting. Improve logging
with timestamps and ensure proper validation of environment
variables and configuration files. This refactor aims to make
the script more robust and easier to extend in the future.

--- a/examples/env.example
+++ b/examples/env.example
@@ -9,9 +9,12 @@
 # ============================================================================
 
 # Your XMPP domain (REQUIRED - change this!)
+# This is the domain users will have in their JID (e.g., user@atl.chat)
+# Use SRV records to delegate to xmpp.atl.chat for clean separation
 PROSODY_DOMAIN=yourdomain.com
 
 # Administrator JIDs (comma-separated)
+# Use the same domain as PROSODY_DOMAIN
 PROSODY_ADMINS=admin@yourdomain.com
 
 # ============================================================================
